# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
CELLULAR_CALL_PATH = "../../.."

ohos_unittest("cellular_call_cs_calloperation_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "cstest"
  module_out_path = part_name + "/" + test_module
  sources = [
    "cs_calloperation_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallCsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("cellular_call_cs1_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "cstest"
  module_out_path = part_name + "/" + test_module
  sources = [
    "cs1_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallCsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("cellular_call_cs2_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "cstest"
  module_out_path = part_name + "/" + test_module
  sources = [
    "cs2_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallCsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

group("unittest") {
  testonly = true
  deps = [
    ":cellular_call_cs1_test",
    ":cellular_call_cs2_test",
    ":cellular_call_cs_calloperation_test",
  ]
}
