# Copyright (C) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
CELLULAR_CALL_PATH = "../../.."

ohos_unittest("tel_ims_callback1_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "ims_callback1_test.cpp",
    "ims_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("tel_ims_callback2_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "ims_callback_test.cpp",
    "ims_test.cpp",
    "ims_callback2_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("tel_ims1_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "ims_test.cpp",
    "ims1_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("tel_ims2_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "ims_test.cpp",
    "ims2_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("tel_zero_branch1_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "zero_branch1_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("tel_zero_branch1_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "zero_branch2_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("tel_cellular_call_stub_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "cellular_call_stub_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("tel_ims_call_callback_stub_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "ims_call_callback_stub_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("tel_cellular_call_hisysevent_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "cellular_call_hisysevent_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("tel_emergency_utils_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "emergency_utils_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("tel_ims_connection_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "ims_connection_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("tel_mmi_code_message_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "mmi_code_message_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

ohos_unittest("tel_config_request_test") {
  subsystem_name = "telephony"
  part_name = "cellular_call"
  test_module = "imstest"
  module_out_path = part_name + "/" + test_module

  sources = [
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_callback_stub.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_client.cpp",
    "${CELLULAR_CALL_PATH}/../core_service/services/ims_service_interaction/src/ims_core_service_proxy.cpp",
    "config_request_test.cpp",
  ]

  include_dirs = [
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite",
    "${CELLULAR_CALL_PATH}/services/common/include",
    "${CELLULAR_CALL_PATH}/services/connection/include",
    "${CELLULAR_CALL_PATH}/services/control/include",
    "${CELLULAR_CALL_PATH}/services/manager/include",
    "${CELLULAR_CALL_PATH}/services/utils/include",
  ]

  deps = [
    "${CELLULAR_CALL_PATH}:tel_cellular_call",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/ims:tel_ims_call_api",
    "${CELLULAR_CALL_PATH}/interfaces/innerkits/satellite:tel_satellite_call_api",
    "//third_party/libphonenumber/cpp:phonenumber_standard",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "call_manager:tel_call_manager_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:libtel_common",
    "core_service:tel_core_service_api",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "eventhandler:libeventhandler",
    "graphic_surface:surface",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
  ]
  defines = [
    "TELEPHONY_LOG_TAG = \"CellularCallImsTest\"",
    "LOG_DOMAIN = 0xD000F00",
  ]
}

group("unittest") {
  testonly = true
  deps = [
    ":tel_ims_callback1_test",
    ":tel_ims_callback2_test",
    ":tel_ims1_test",
    ":tel_ims2_test",
    ":tel_zero_branch1_test",
    ":tel_zero_branch2_test",
    ":tel_cellular_call_stub_test",
    ":tel_ims_call_callback_stub_test",
    ":tel_cellular_call_hisysevent_test",
    ":tel_emergency_utils_test",
    ":tel_ims_connection_test",
    ":tel_mmi_code_message_test",
    ":tel_config_request_test",
  ]
}
